# bolderkey-engine

./: .gitignore  CMakeLists.txt  README.md
BolderkeyEngine/include/: bolderkey.h
BolderkeyEngine/src/: crypto.c  main.c  memory.c  passwd.c  vault.c
BolderkeyEngine/wrapper/: bolderkey.hpp
include/: bolderkey.h  crypto.h  passwd.h  vault.h
src/: crypto.c  main.c  main.h  passwd.c  vault.c
src/core/: bolderkey.h  hash.c  hash.h  passwr_maker.c  passwr_maker.h  vault.c  vault.h
